--- a/archiso/syslinux/archiso_sys-linux.cfg
+++ b/archiso/syslinux/archiso_sys-linux.cfg
@@ -3,7 +3,7 @@ TEXT HELP
 Boot the arconet install medium on BIOS.
 It allows you to install arconet or perform system maintenance.
 ENDTEXT
-MENU LABEL Boot arconet (x86_64, BIOS, open source)
+MENU LABEL Boot arconet kiro (x86_64, BIOS, open source)
 LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 INITRD /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 APPEND archisobasedir=%INSTALL_DIR% cow_spacesize=4G copytoram=n archisodevice=UUID=%ARCHISO_UUID% driver=free module_blacklist=nvidia,nvidia_modeset,nvidia_uvm,nvidia_drm,pcspkr nouveau.modeset=1 radeon.modeset=1 i915.modeset=1 nvme_load=yes
@@ -13,7 +13,7 @@ TEXT HELP
 Boot the arconet install medium on BIOS with proprietary drivers (NVIDIA).
 It allows you to install arconet or perform system maintenance.
 ENDTEXT
-MENU LABEL Boot arconet (x86_64, BIOS, NVIDIA)
+MENU LABEL Boot arconet kiro (x86_64, BIOS, NVIDIA)
 LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 INITRD /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 APPEND archisobasedir=%INSTALL_DIR% cow_spacesize=4G copytoram=n archisodevice=UUID=%ARCHISO_UUID% driver=nonfree nvidia nvidia-drm.modeset=1 nouveau.modeset=0 radeon.modeset=1 i915.modeset=1 module_blacklist=pcspkr nvme_load=yes
@@ -23,7 +23,7 @@ TEXT HELP
 Boot the arconet install medium on BIOS with nomodeset.
 It allows you to install arconet or perform system maintenance.
 ENDTEXT
-MENU LABEL Boot arconet (x86_64, BIOS, nomodeset)
+MENU LABEL Boot arconet kiro (x86_64, BIOS, nomodeset)
 LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 INITRD /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 APPEND archisobasedir=%INSTALL_DIR% cow_spacesize=4G copytoram=n archisodevice=UUID=%ARCHISO_UUID% driver=free nomodeset module_blacklist=nvidia,nvidia_modeset,nvidia_uvm,nvidia_drm,pcspkr nouveau.modeset=0 radeon.modeset=0 i915.modeset=0 nvme_load=yes
