--- a/archiso/efiboot/loader/entries/03-nvidianouveau.conf
+++ b/archiso/efiboot/loader/entries/03-nvidianouveau.conf
@@ -1,7 +1,5 @@
-title   arconet install medium (x86_64, UEFI, NVIDIA)
+title   arconet install medium (%ARCH%, UEFI, NVIDIA)
 sort-key 03
-linux   /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
-initrd  /%INSTALL_DIR%/boot/intel-ucode.img
-initrd  /%INSTALL_DIR%/boot/amd-ucode.img
-initrd  /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
-options archisobasedir=%INSTALL_DIR% cow_spacesize=4G copytoram=n archisodevice=UUID=%ARCHISO_UUID% driver=nonfree nouveau.modeset=0 radeon.modeset=1 i915.modeset=1 nvme_load=yes
+linux   /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux
+initrd  /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
+options archisobasedir=%INSTALL_DIR% cow_spacesize=4G copytoram=n archisosearchuuid=%ARCHISO_UUID% driver=nonfree nouveau.modeset=0 radeon.modeset=1 i915.modeset=1 nvme_load=yes
