--- a/archiso/grub/loopback.cfg
+++ b/archiso/grub/loopback.cfg
@@ -55,6 +55,18 @@ if [ "${grub_platform}" == 'efi' ]; then
         menuentry 'UEFI Shell' --class efi {
             chainloader /shellia32.efi
         }
+    elif [ "${grub_cpu}" == 'arm64' -a -f '/shellaa64.efi' ]; then
+        menuentry 'UEFI Shell' --class efi {
+            chainloader /shellaa64.efi
+        }
+    elif [ "${grub_cpu}" == 'riscv64' -a -f '/shellriscv64.efi' ]; then
+        menuentry 'UEFI Shell' --class efi {
+            chainloader /shellriscv64.efi
+        }
+    elif [ "${grub_cpu}" == 'loongarch64' -a -f '/shellloongarch64.efi' ]; then
+        menuentry 'UEFI Shell' --class efi {
+            chainloader /shellloongarch64.efi
+        }
     fi
 
     menuentry 'UEFI Firmware Settings' --id 'uefi-firmware' {
